2005-02-25  Dan Winship  <danw@novell.com>

	* libstetic/ObjectWrapper.cs (Register): Fix the no-CreateInstance
	case to use the *wrapped* type's ctor, not the wrapper type.

	* libstetic/wrapper/Container.cs (Register): Make types whose
	containerchild types are declared by a superclass work again.

2005-02-25  Dan Winship  <danw@novell.com>

	* libstetic/wrapper/Icon.cs: 
	* libstetic/wrapper/Image.cs: Merge these two together, with a
	bool property to switch between stock icon and pixmap behavior.
	It's too messy to have two GtkImage wrappers.

	* libstetic/ObjectWrapper.cs (Register, WrapperType): Simplify the
	logic here for 1-1 mapping between gtk and stetic types.

	* stetic/GladeImport.cs: Likewise

2005-02-25  Dan Winship  <danw@novell.com>

	* stetic/Project.cs: implement IStetic

	* stetic/GladeImport.cs: pass the Project down into CreateWidget
	and AddChildren so they can eventually pass it to
	ObjectWrapper.Create as an IStetic. One more FIXME down.

	* stetic/Palette.cs: take a Project at construct time and pass it
	on to WidgetFactories

	* stetic/WidgetFactory.cs: take a Project at construct time and
	pass that to new wrappers rather than implementing IStetic here.

	* stetic/Stetic.cs: pass Project to the Palette

	* libstetic/ObjectWrapper.cs (Create): swap the order of the
	arguments

	* libstetic/wrapper/Container.cs (ChildWrapper): update for
	ObjectWrapper.Create change

2005-02-24  Dan Winship  <danw@novell.com>

	* libstetic/ObjectWrapper.cs: remove the protected (IStetic,
	object) constructor and replace it with a virtual Wrap method.
	(Register): new method to register a wrapper type
	(Create): new method to create a wrapper of a given type (with
	either a provided widget or a fresh one).
	(AddItemGroup): replaces RegisterWrapper. Adds a single ItemGroup
	to the type.
	(AddContextMenuItems): replaces RegisterContextMenu

	* libstetic/ObjectWrapperAttribute.cs: remove the WrappedType
	again; it's now a static property on the wrapper.
